<h1 id='change-logs'>Change Logs</h1><h2 id='2021'>2021</h2><h3 id='2021-12-06'>2021-12-06</h3>
<p>Upbit Client Released: v1.2.2.2</p>

<ul>
<li>RestSharp 버전 업데이트: v105.1.0 -&gt; 106.11.8-alpha.0.13</li>
<li>Python urllib3 Package 버전 업데이트: v1.26.4 -&gt; v1.26.5</li>
<li>그 외 원활한 형상관리를 위해 GitHub Repository에 Dependabot alerts와 CodeQL(Code scanning alerts) Action을 추가하였습니다.</li>
</ul>
<h3 id='2021-12-01'>2021-12-01</h3>
<p>Update Client Released: v1.2.2.1</p>

<ul>
<li>Upbit OPEN API 버전 1.2.2 업데이트 반영</li>
<li>Python Websocket Package 버전 업데이트: v8.1 -&gt; v10.1</li>
<li>아래와 같은 이유 때문에 기존의 Python websocket 패키지 버전을 업데이트 했음을 참고하시기 바랍니다. <strong>전체 코드상에는 지장이 없습니다.</strong></li>
<li><em>Python Websocket Package Issues: The aaugustin websockets library before 9.1 for Python has an Observable Timing Discrepancy on servers when HTTP Basic Authentication is enabled with basic_auth_protocol_factory(credentials=...). An attacker may be able to guess a password via a timing attack.</em></li>
<li>UpbitWebSocket 클래스에 <code>ping</code> 메소드 추가</li>
<li>Websocket의 응답 형식에서 <code>deprecated</code> 된 필드들이 삭제됩니다.</li>
<li>Websocket Ticker(현재가) 응답의 <code>trade_status</code> , <code>market_state_for_ios</code> 필드 제거</li>
<li>자세한 사항은 <a href="https://docs.upbit.com/changelog/open-api-%EA%B0%9C%EC%84%A0%EC%82%AC%ED%95%AD-%EC%95%88%EB%82%B4deprecated-%EB%90%9C-%ED%95%84%EB%93%9C-%EC%82%AD%EC%A0%9C">여기</a>를 통해 확인 바랍니다.</li>
</ul>
<h3 id='2021-04-01'>2021-04-01</h3>
<p>Update Client Released: v1.2.0.4</p>

<ul>
<li><code>__init__.py</code> Docstring 추가</li>
<li><code>authentication.py</code> 소스 코드 리팩토링</li>
</ul>
<h3 id='2021-03-19'>2021-03-19</h3>
<p>Update Client Released: v1.2.0.3</p>

<ul>
<li>Upbit OPEN API 버전 1.2.0 업데이트 반영: <strong>Order</strong> 섹션의 <code>전체 주문 조회</code> 항목을 참고하세요.</li>
<li><code>authentication.py</code> JWT 서명 알고리즘 방식 중 array 타입 파라미터 요청 시 발생하는 버그 픽스</li>
<li>모든 JSON 결과값에 <code>response</code> 키와 값을 추가하였습니다. <strong>UpbitClient (Upbit Client 사용하기)</strong> 섹션을 참고하세요.</li>