@@ -326,6 +326,9 @@
             <a href="#change-logs" class="toc-h1 toc-link" data-title="Change Logs">Change Logs</a>
               <ul class="toc-list-h2">
                   <li>
+                    <a href="#2022" class="toc-h2 toc-link" data-title="2022">2022</a>
+                  </li>
+                  <li>
                     <a href="#2021" class="toc-h2 toc-link" data-title="2021">2021</a>
                   </li>
               </ul>
@@ -636,7 +639,15 @@
 <p><img alt="uJhin's BTC" src="https://img.shields.io/badge/BTC-3NVw2seiTQddGQwc1apqudKxuTqebpyL3s-blue?style=flat-square&logo=bitcoin">
 <br/>
 <img alt="uJhin's ETH" src="https://img.shields.io/badge/ETH-0x60dd373f59862d9df776596889b997e24bee42eb-blue?style=flat-square&logo=ethereum"></p>
-<h1 id='change-logs'>Change Logs</h1><h2 id='2021'>2021</h2><h3 id='2021-12-06'>2021-12-06</h3>
+<h1 id='change-logs'>Change Logs</h1><h2 id='2022'>2022</h2><h3 id='2022-01-14'>2022-01-14</h3>
+<p>Upbit Client Released: v1.2.2.4</p>
+
+<ul>
+<li>Python Websocket Package 버전을 Release 하면서 v10.1 버전으로 반영</li>
+<li>Websocket Client 예제 코드 수정</li>
+<li>성능 개편 및 소스 코드 리팩토링</li>
+</ul>
+<h2 id='2021'>2021</h2><h3 id='2021-12-06'>2021-12-06</h3>
 <p>Upbit Client Released: v1.2.2.2</p>
 
 <ul>
